# Flow402

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  X402_SETUP.md  docker-compose.yml  middleware.ts  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
__tests__/: calculator.test.ts  x402-payment.test.ts
app/: globals.css  layout.tsx  page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/me/: route.ts
app/api/auth/refresh/: route.ts
app/api/auth/signup/: route.ts
app/api/cron/metering/: route.ts
app/api/nodes/: route.ts
app/api/offers/: route.ts
app/api/offers/[id]/: route.ts
app/api/payments/authorize/: route.ts
app/api/rentals/: route.ts
app/consumer/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/login/: page.tsx
app/market/: page.tsx
app/provider/: page.tsx
app/signup/: page.tsx
components/calculator/: RentalCalculator.tsx
components/layout/: Footer.tsx  Navbar.tsx
docs/: API.md
lib/auth/: jwt.ts  middleware.ts
lib/jobs/: metering.ts
lib/payments/: calculator.ts  rust-crypto.ts
lib/payments/x402/: mock.ts  provider.ts  solana-provider.ts  types.ts
lib/utils/: api-response.ts  errors.ts  validation.ts
prisma/: schema.prisma  seed.ts
rust-lib/: Cargo.toml  README.md  build.sh  example-usage.md
rust-lib/examples/: usage.rs
rust-lib/src/: lib.rs  metering.rs  utils.rs
(+6 files in other folders)
